set up primary content areas using grid-template-areas, repeat(), and fractional fr units

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <title>- Admin Dashboard -</title>
 </head>
 <body>
-    <p>Hello World!</p>
+    <div class="container">
+        <header>
+            Header
+        </header>
+        <nav>
+            Navigation
+        </nav>
+        <main>
+            Main Content
+        </main>
+    </div>
 </body>
 </html>
