added nested grids for nav and nav items. added placeholder icon divs for each nav list item

--- a/index.html
+++ b/index.html
@@ -8,15 +8,32 @@
     <title>- Admin Dashboard -</title>
 </head>
 <body>
-    <div class="container">
+    <div id="container">
         <header>
-            Header
+            
         </header>
         <nav>
-            Navigation
+            <div id="logo"> <div class="icon">ICON</div> Dashboard</div>
+            <div id="overview">
+                <ul>
+                    <li> <div class="icon">ICON</div> Home</li>
+                    <li> <div class="icon">ICON</div> Profile</li>
+                    <li> <div class="icon">ICON</div> Messages</li>
+                    <li> <div class="icon">ICON</div> History</li>
+                    <li> <div class="icon">ICON</div> Tasks</li>
+                    <li> <div class="icon">ICON</div> Communities</li>
+                </ul>
+            </div>
+            <div id="config">
+                <ul>
+                    <li> <div class="icon">ICON</div> Settings</li>
+                    <li> <div class="icon">ICON</div> Support</li>
+                    <li> <div class="icon">ICON</div> Privacy</li>
+                </ul>
+            </div>
         </nav>
         <main>
-            Main Content
+            
         </main>
     </div>
 </body>
