index.html added header content and placeholder icon text in a 2 row, 2 column grid layout. style.css spaced the content in grid cells using flex.

--- a/index.html
+++ b/index.html
@@ -31,10 +31,29 @@
             </nav>
         <div id="main-content">
             <header>
-
+                    <div id="search-area">
+                        <div class="icon">ICON</div>
+                        <input type="search" name="" id="search-bar">
+                    </div>
+                    <div id="profile-area">
+                        <div id="alert" class="icon">ICON</div>
+                        <div id="profile-pic" class="icon">ICON</div>
+                        <div id="profile-text">John Doe</div>
+                    </div>
+                    <div id="title-area">
+                        <div id="title-pic" class="icon">ICON</div>
+                        <div id="user-title">
+                            <h6>Hi there,</h6> 
+                            <h3>John Doe (@john)</h3>
+                        </div>
+                    </div>
+                    <div id="buttons-area">
+                        <button id="new">New</button>
+                        <button id="upload">Upload</button>
+                        <button id="share">Share</button>
+                    </div>
             </header>
             <main>
-    
             </main>
         </div>
     </div>
