index.html added #projects-container div with .project cards, each with .project-icons placeholder divs. Added #news-area div. style.css added .project class for project cards, aligned with display:grid.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,57 @@
                     </div>
             </header>
             <main>
-            </main>
+        <div id="projects-container">
+                <h3 id="projects-heading">Your Projects</h3>
+                <div id="projects-area">
+                <div class="project">
+                    <h4>Super Cool Project 1</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium quisquam temporibus sed mollitia doloremque, eius repudiandae eaque, dolorum harum quidem nesciunt molestiae, ad in quasi asperiores id. Labore, optio eveniet!</p>
+                    <div class="project-icons">
+                        ICONS
+                    </div>
+                </div>
+                <div class="project">
+                    <h4>Super Cool Project 2</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium quisquam temporibus sed mollitia doloremque, eius repudiandae eaque, dolorum harum quidem nesciunt molestiae, ad in quasi asperiores id. Labore, optio eveniet!</p>
+                    <div class="project-icons">
+                        ICONS
+                    </div>
+                </div>
+                <div class="project">
+                    <h4>Super Cool Project 3</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium quisquam temporibus sed mollitia doloremque, eius repudiandae eaque, dolorum harum quidem nesciunt molestiae, ad in quasi asperiores id. Labore, optio eveniet!</p>
+                    <div class="project-icons">
+                        ICONS
+                    </div> 
+                </div>
+                <div class="project">
+                    <h4>Super Cool Project 4</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium quisquam temporibus sed mollitia doloremque, eius repudiandae eaque, dolorum harum quidem nesciunt molestiae, ad in quasi asperiores id. Labore, optio eveniet!</p>
+                    <div class="project-icons">
+                        ICONS
+                    </div> 
+                </div>
+                <div class="project">
+                    <h4>Super Cool Project 5</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium quisquam temporibus sed mollitia doloremque, eius repudiandae eaque, dolorum harum quidem nesciunt molestiae, ad in quasi asperiores id. Labore, optio eveniet!</p>
+                    <div class="project-icons">
+                        ICONS
+                    </div> 
+                </div>
+                <div class="project">
+                    <h4>Super Cool Project 6</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium quisquam temporibus sed mollitia doloremque, eius repudiandae eaque, dolorum harum quidem nesciunt molestiae, ad in quasi asperiores id. Labore, optio eveniet!</p>
+                    <div class="project-icons">
+                        ICONS
+                    </div> 
+                </div>
+        </div>
+        </div>
+        <div id="news-area">
+            ANNOUNCEMENTS AND TRENDING
+        </div>
+        </main>
         </div>
     </div>
 </body>
