index.html added #announcement-area and #trending-area divs with .announcements and .trends cards, respectively, each with placeholder text or icons. style.css aligned these cards with display:grid. Also aligned all content in main to the top of main.

--- a/index.html
+++ b/index.html
@@ -58,42 +58,42 @@
                 <h3 id="projects-heading">Your Projects</h3>
                 <div id="projects-area">
                 <div class="project">
-                    <h4>Super Cool Project 1</h4>
+                    <h4>Super Cool Project</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium quisquam temporibus sed mollitia doloremque, eius repudiandae eaque, dolorum harum quidem nesciunt molestiae, ad in quasi asperiores id. Labore, optio eveniet!</p>
                     <div class="project-icons">
                         ICONS
                     </div>
                 </div>
                 <div class="project">
-                    <h4>Super Cool Project 2</h4>
+                    <h4>Less Cool Project</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium quisquam temporibus sed mollitia doloremque, eius repudiandae eaque, dolorum harum quidem nesciunt molestiae, ad in quasi asperiores id. Labore, optio eveniet!</p>
                     <div class="project-icons">
                         ICONS
                     </div>
                 </div>
                 <div class="project">
-                    <h4>Super Cool Project 3</h4>
+                    <h4>Impossible App</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium quisquam temporibus sed mollitia doloremque, eius repudiandae eaque, dolorum harum quidem nesciunt molestiae, ad in quasi asperiores id. Labore, optio eveniet!</p>
                     <div class="project-icons">
                         ICONS
                     </div> 
                 </div>
                 <div class="project">
-                    <h4>Super Cool Project 4</h4>
+                    <h4>Easy Peasy App</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium quisquam temporibus sed mollitia doloremque, eius repudiandae eaque, dolorum harum quidem nesciunt molestiae, ad in quasi asperiores id. Labore, optio eveniet!</p>
                     <div class="project-icons">
                         ICONS
                     </div> 
                 </div>
                 <div class="project">
-                    <h4>Super Cool Project 5</h4>
+                    <h4>Ad Blocker</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium quisquam temporibus sed mollitia doloremque, eius repudiandae eaque, dolorum harum quidem nesciunt molestiae, ad in quasi asperiores id. Labore, optio eveniet!</p>
                     <div class="project-icons">
                         ICONS
                     </div> 
                 </div>
                 <div class="project">
-                    <h4>Super Cool Project 6</h4>
+                    <h4>Money Maker</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium quisquam temporibus sed mollitia doloremque, eius repudiandae eaque, dolorum harum quidem nesciunt molestiae, ad in quasi asperiores id. Labore, optio eveniet!</p>
                     <div class="project-icons">
                         ICONS
@@ -102,7 +102,59 @@
         </div>
         </div>
         <div id="news-area">
-            ANNOUNCEMENTS AND TRENDING
+            <div id="announcements-container">
+                <h3>Announcements</h3>
+                <div id="announcement-area">
+                    <div class="project announcements">
+                        <div class="announcement">
+                            <h4>Site Maintenance</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium quisquam temporibus sed mollitia...</p>
+                        </div>
+                        <div class="announcement">
+                            <h4>Community Share Day</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium quisquam temporibus sed mollitia...</p>
+                        </div>
+                        <div class="announcement">
+                            <h4>Updated Privacy Policy</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium quisquam temporibus sed mollitia...</p>
+                        </div>
+                </div>
+            </div>
+            </div>
+            <div id="trending-container">
+                <h3>Trending</h3>
+                <div id="trending-area">
+                    <div class="project trends">
+                        <div class="trend-blurb">
+                            <div class="icon">ICON</div>
+                                <div class="trend-blurb-text">
+                                    <h4>@tegan</h4>
+                                    <p>World Peace Builder</p>
+                                </div>
+                        </div>
+                        <div class="trend-blurb">
+                            <div class="icon">ICON</div>
+                                <div class="trend-blurb-text">
+                                    <h4>@morgan</h4>
+                                    <p>Super Cool Project</p>
+                                </div>
+                        </div>
+                        <div class="trend-blurb">
+                            <div class="icon">ICON</div>
+                                <div class="trend-blurb-text">
+                                    <h4>@kendall</h4>
+                                    <p>Life Changing App</p>
+                                </div>
+                        </div>
+                        <div class="trend-blurb">
+                            <div class="icon">ICON</div>
+                                <div class="trend-blurb-text">
+                                    <h4>@alex</h4>
+                                    <p>No Traffic Maker</p>
+                                </div>
+                        </div>
+                </div>
+            </div>
         </div>
         </main>
         </div>
