--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
                         <div class="header-icon">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>bell-ring-outline</title><path d="M10,21H14A2,2 0 0,1 12,23A2,2 0 0,1 10,21M21,19V20H3V19L5,17V11C5,7.9 7.03,5.17 10,4.29C10,4.19 10,4.1 10,4A2,2 0 0,1 12,2A2,2 0 0,1 14,4C14,4.1 14,4.19 14,4.29C16.97,5.17 19,7.9 19,11V17L21,19M17,11A5,5 0 0,0 12,6A5,5 0 0,0 7,11V18H17V11M19.75,3.19L18.33,4.61C20.04,6.3 21,8.6 21,11H23C23,8.07 21.84,5.25 19.75,3.19M1,11H3C3,8.6 3.96,6.3 5.67,4.61L4.25,3.19C2.16,5.25 1,8.07 1,11Z" /></svg>
                         </div>
-                        <img src="./img/user.png" id="profile-pic">
+                        <img src="./img/user-gold.png" id="profile-pic">
                         <div id="profile-text">John Doe</div>
                     </div>
                     <div id="title-area">
-                        <img src="./img/user.png" id="title-pic">
+                        <img src="./img/user-gold.png" id="title-pic">
                         <div id="user-title">
                             <h6>Hi there,</h6> 
                             <h3>John Doe (@john)</h3>
@@ -196,28 +196,28 @@
                 <div id="trending-area">
                     <div class="project trends">
                         <div class="trend-blurb">
-                            <img src="./img/user.png" class="trend-pic">
+                            <img src="./img/user-sky.png" class="trend-pic">
                                 <div class="trend-blurb-text">
                                     <p>@tegan</p>
                                     <p>World Peace Builder</p>
                                 </div>
                         </div>
                         <div class="trend-blurb">
-                            <img src="./img/user.png" class="trend-pic">
+                            <img src="./img/user-gold.png" class="trend-pic">
                                 <div class="trend-blurb-text">
                                     <p>@morgan</p>
                                     <p>Super Cool Project</p>
                                 </div>
                         </div>
                         <div class="trend-blurb">
-                            <img src="./img/user.png" class="trend-pic">
+                            <img src="./img/user-gray.png" class="trend-pic">
                                 <div class="trend-blurb-text">
                                     <p>@kendall</p>
                                     <p>Life Changing App</p>
                                 </div>
                         </div>
                         <div class="trend-blurb">
-                            <img src="./img/user.png" class="trend-pic">
+                            <img src="./img/user-pink.png" class="trend-pic">
                                 <div class="trend-blurb-text">
                                     <p>@alex</p>
                                     <p>No Traffic Maker</p>
